# scripts

./: .gitignore  .prettierrc  README.md  pyproject.toml
.config/: proj-init.json  prompt-map.json  scripts.json
blog/: README.md  blog.ps1  config.psm1  test-cli.ps1  test-commands.ps1  test-delete.ps1  test-paths.ps1  test-post-edit.ps1  test-utils.ps1
cli/: Loader.ps1  Main.ps1  data.json  scriptAssociations.json
copy_package_test/: package-lock.json  package.json  tsconfig.json
data/: dev-emoji-cheatsheet.json  emoji-cheatsheet.json  focus-logs.json  focus-tasks.json  info.json  magic.json  print_project.json  proj_time.txt  proj_time_convert.json  proj_time_scheme.json  putfile.json  tasks-archive.md  tasks.md
docs/: PowerShell Script Alias.md  blog_layout.md  blog_spec.md  cstats.md  focus.md  focus_app.md  focus_test.md  ftt.md  index-pl.md  index.md  projlog.md  py-console-script.md  script_rules.md  scripts-reflection.md  scripts-repository.md  speech.md  sread.md  stt.md  type-checking.md
mouse/: automate.py  command.txt  data_loader.py  mouse_commands.json  print.py
mouse_app/: mouseInfoLog.txt
mp3/: mp3.py
pomodoro/: ConfigHandler.py  Logger.py  PopupWindow.py  SoundPlayer.py  Timer.py  pomodoro.config.json  pomodoro.py  pomodoro_log.txt
pomodoro_2/: pomodoro.py
py/: log_project.py
scripts/: blog_index.py  clipboard_collector.py  code_to_md.py  cstats.py  dir2md.py  entry.py  focus.py  focus_drone.py  ftt.py  info.py  magic.ps1  nscript.ps1  path2md.py  projlog.py  putfile.ps1  pymsg.py  runcmddb.ps1  snip.py  snippet_collector.py  speech.py  sread.py  stt.py  taskmd.ps1  text_adventure.py  timer.py  treecp.py  tts.py  vidlog.py
src_js/: copy_package.js  test.js
src_ps1/: npm.ps1  proj_time.ps1  proj_time_convert.ps1  proj_time_converter.ps1  run_football_client.ps1  run_football_client2.ps1  run_football_desktop.ps1  run_football_editor.ps1  run_football_engine_client.ps1  run_football_server.ps1  run_micro_engine_client.ps1  run_notes.ps1  run_proto_lab.ps1
src_py/: functions.py  print_project.py
text_pipe/: package-lock.json  package.json  tsconfig.json
text_to_speech/: text_to_speech.ps1
timeWatch/: timeWatch.py
utils/: CloneFile.ps1  CloneFile.psm1  Dates.py  (+8 more)
(+187 files in other folders)
