[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scripts"
version = "1.0.0"
description = "A simple scripts package"
authors = [
  { name="Atari-Monk", email="atari.monk1@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
info = "scripts.info:main"
snip = "scripts.snip:main"
src2md = "scripts.src2md:main"
treecp = "scripts.treecp:main"

[tool.setuptools.packages.find]
where = ["."]
