[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scripts"
version = "1.0.0"
description = "A simple scripts package"
authors = [
  { name="Atari-Monk", email="atari.monk1@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cstats = "scripts.cstats:main"
entry = "scripts.entry:main"
focus = "scripts.focus:main"
ftt = "scripts.ftt:main"
info = "scripts.info:main"
path2md = "scripts.path2md:main"
projlog = "scripts.projlog:main"
pymsg = "scripts.pymsg:main"
scripts_readme = "scripts.scripts_readme:main"
snip = "scripts.snip:main"
src2md = "scripts.src2md:main"
stt = "scripts.stt:main"
timer = "scripts.timer:main"
treecp = "scripts.treecp:main"
tts = "scripts.tts:main"
vidlog = "scripts.vidlog:main"

[tool.setuptools.packages.find]
where = ["."]
